--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Zheng-Yan-Zhong.github.io/E-shop-client",
+  "homepage": "http://Zheng-Yan-Zhong.github.io/e-shop-client",
   "name": "client",
   "version": "0.1.0",
   "private": true,
